# gmaps-review-notif

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DOCKER.md  Dockerfile  LICENSE  README.md  RELEASING.md  docker-compose.yml  gmaps-review-notif.sln
.github/workflows/: build-and-release.yml  ci.yml  diesel-test.yml  docker-publish.yml  nightly-release.yml
Core/: Core.csproj  FollowingServersService.cs  GmapsUserService.cs  PeriodicUpdateCheckerService.cs  PostedReviewService.cs
DataBase/: AppDbContext.cs  DataBase.csproj  DbDisposable.cs
DataBase/accessor/: DbAccessorFollowingServer.cs  DbAccessorGmapsUser.cs  DbAccessorPostedReview.cs
DataBase/entity/: FollowingServer.cs  GmapsUser.cs  PostedReview.cs
DiscordBot/: DiscordBot.csproj  Init.cs  Utilities.cs
DiscordBot/discord/: Client.cs  SlashCommandHandler.cs
Dto/: Dto.csproj  FollowingServerDto.cs  GmapsUserDto.cs  PostedReviewDto.cs
Dto/Mappers/: FollowingServerMapper.cs  GmapsUserMapper.cs  PostedReviewMapper.cs
Startup/: DotEnv.cs  Program.cs  Startup.csproj
WebCrawler/: Browser.cs  GetUser.cs  UserLatestReview.cs  WebCrawler.csproj
crawler/: Browser.cs  GetUser.cs  UserLatestReview.cs  crawler.csproj
db/: AppDbContext.cs  db.csproj
db/entity/: FollowingServer.cs  GmapsUser.cs  PostedReview.cs
discord-bot/: Init.cs  discord-bot.csproj
discord-bot/discord/: Client.cs  SlashCommandHandler.cs
gmaps-review-notif/: DotEnv.cs  Program.cs  gmaps-review-notif.csproj
migrations/2025-11-22-120355-0000_create_tables/: down.sql  up.sql
migrations/2026-04-20-081045-0000_add_review_url/: down.sql  up.sql
migrations/2026-04-20-095148-0000_link_review_pictures/: down.sql  up.sql
src/: config.rs  main.rs  models.rs  schema.rs
src/background/: worker.rs
src/crawler/: browser.rs  mod.rs
src/discord/: builder.rs  commands.rs  mod.rs
src/provider/: db.rs  following.rs  (+3 more)
(+16 files in other folders)
