[package]
name = "gmaps_review_notif"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = "0.6.1"
dotenvy = "0.15.7"
headless_chrome = { version = "1.0.18", features = ["fetch"] }
diesel = "2.3.3"
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
regex = "1.12.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-log = "0.2.0"
urlencoding = "2.1.3"