[package]
name = "gmaps_review_notif"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = "0.6"
dotenvy = "0.15"
headless_chrome = { version = "1.0.21", features = ["fetch"] }
diesel = { version = "2.3", features = ["postgres", "r2d2", "chrono", "serde_json"] }
diesel_migrations = "2.3"
anyhow = "1.0"
tokio = { version = "1.52", features = ["rt", "rt-multi-thread", "macros"] }
tokio-cron-scheduler = "0.15"
regex = "1.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
urlencoding = "2.1"
chrono = "0.4"
serde_json = "1.0"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
